# certify-tui

./: LICENSE  README.md  certify-tui.py  pyproject.toml  requirements.txt
certify_tui/: __main__.py  app.py
