[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certify-tui"
version = "0.1.0"
description = "Terminal UI to generate CSRs and convert certificate formats"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.50.0"
]

[project.scripts]
certify-tui = "certify_tui.__main__:main"
